@@ -1,5 +1,8 @@
 2003-05-29  Matti Aarnio  <mea@zmailer.org>
 
+	* include/shmmib.h, scheduler/scheduler.c, scheduler/mailq.inc:
+	    Count for scheduler's time-server starts, and last start-time.
+
 	* transports/smtp/smtp.c:
 	    Count pipelining transmits only when doing connection
 	    open, not for every sent message...
